@@ -1,3 +1,7 @@
+2012-01-22  Valek Filippov
+
+		* PUB: Some improvements in  representation an parsing of blocks.
+
 2012-01-15  Valek Filippov
 
 		* Escher: temporary changes to look into file from fdo#43193
